<resources>
    <string name="app_name">Get Connected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //splash screen
    <string name="welcome">Welcome to our community.</string>

    //register page and login page and phone number page
    <string name="name">User Name</string>
    <string name="email">User Email</string>
    <string name="password">User Password</string>
    <string name="address">User Address</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="old_user">Already have an account.</string>
    <string name="new_user">Dont have an account.</string>
    <string name="new_phone">Sign Up With Phone.</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>


    // Fragment Strings
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
</resources>