<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Register">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/registerUserName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_text_shape"
        android:textColorHint="@color/black"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_text_shape"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUserName" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_text_shape"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

    <TextView
        android:id="@+id/oldUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:text="@string/old_user"
        app:layout_constraintEnd_toEndOf="@+id/registerPassword"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_register_btn_shape"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/login_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldUser" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/google"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/google_btn_shape"
        android:textColor="@color/google_btn_text"
        app:layout_constraintEnd_toStartOf="@+id/facebookLoginBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebookLoginBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/facebook"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/facebook_btn_shape"
        android:textColor="@color/facebook_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/googleLoginBtn"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    <TextView
        android:id="@+id/signUpWithPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_phone"
        android:textSize="20sp"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleLoginBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>